# godot-rapier-3d

./: .gitignore  RigidBody3D.gd  icon.svg.import  main.tscn  node_3d.tscn  project.godot  rapier-godot.gdextension
godot-rapier/: Cargo.toml  LICENSE.txt  THIRDPARTY.txt  log.txt
godot-rapier/src/: area.rs  body.rs  collision_object.rs  conversions.rs  direct_body_state_3d.rs  direct_space_state_3d.rs  error.rs  joint.rs  lib.rs  physics_server_3d.rs  physics_server_3d_utils.rs  space.rs  utils.rs
godot-rapier/src/shapes/: box_shape.rs  capsule_shape.rs  concave_polygon_shape.rs  concave_shape.rs  convex_polygon_shape.rs  convex_shape.rs  cylinder_shape.rs  heightfield_shape.rs  heightmap_shape.rs  mod.rs  separation_ray_shape.rs  sphere_shape.rs  world_boundary_shape.rs
rapier-godot/: Cargo.toml
rapier-godot/src/: area.rs  body.rs  collision_object.rs  direct_body_state_3d.rs  direct_space_state_3d.rs  error.rs  lib.rs  math.rs  physics_server_3d.rs  shape.rs  shapes.rs  space.rs
rapier-godot/src/shapes/: capsule_shape.rs  convex_shape.rs  cylinder_shape.rs  mod.rs  separation_ray_shape.rs  sphere_shape.rs  world_boundary_shape.rs
