[package]
name = "godot-rapier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rapier3d = { version = "*", features = ["simd-stable"] }
thiserror = "1.0.44"

[profile.dev.package.rapier3d]
opt-level = 3
